--- a/static/css/style.css
+++ b/static/css/style.css
@@ -104,7 +104,7 @@
 
 .nav-tabs .nav-link.active {
     color: #0d6efd;
-    background-color: transparent;
+    background-color: rgba(41, 179, 197, 0.411);
     border-bottom: 3px solid #0d6efd;
 }
 
