模块化拆分

--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -2,7 +2,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 mb-3">
-                    <h5>极地智创</h5>
+                    <h5>极地智创信息科技</h5>
                     <ul class="list-unstyled">
                         <li class="mb-1"><a href="#" class="text-decoration-none text-muted">关于我们</a></li>
                         <li class="mb-1"><a href="#" class="text-decoration-none text-muted">加入我们</a></li>
